Change file format in operational instructions
Updated file format from .cyphr to .AV in instructions.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body>
     <div class="container">
         <h2>SECURE TRANSMISSION PROTOCOL // SYSTEM INDEX</h2>
-        <p>This system secures files (Image, Video, or Text) into a custom **.cyphr** file format, ensuring end-to-end privacy.</p>
+        <p>This system secures files (Image, Video, or Text) into a custom **.AV** file format, ensuring end-to-end privacy.</p>
         <hr>
 
         <h3 style="color: var(--main-accent); margin-bottom: 20px;">OPERATIONAL INSTRUCTIONS</h3>
@@ -52,7 +52,7 @@
             <div class="step-number">1</div>
             <div class="step-content">
                 <h3>CREATE & SHARE (Sender)</h3>
-                <p>Go to the **Encryption Terminal**. Enter the shared password, upload the file, and use the **Share File** button to send the `.cyphr` file directly.</p>
+                <p>Go to the **Encryption Terminal**. Enter the shared password, upload the file, and use the **Share File** button to send the `.AV` file directly.</p>
             </div>
         </div>
 
@@ -60,7 +60,7 @@
             <div class="step-number">2</div>
             <div class="step-content">
                 <h3>DECRYPT & ACCESS (Recipient)</h3>
-                <p>Go to the **Decryption Terminal**. Upload the received `.cyphr` file and input the *exact* password to reveal and display the original content.</p>
+                <p>Go to the **Decryption Terminal**. Upload the received `.AV` file and input the *exact* password to reveal and display the original content.</p>
             </div>
         </div>
         
@@ -70,4 +70,5 @@
         </div>
     </div>
 </body>
+
 </html>
